# hyperliquid-trading-bot

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  env.example
config/: default.toml  production.toml
docs/: API.md  STRATEGIES.md
examples/: basic_usage.rs  strategy_custom.rs
scripts/: run_dry.sh  run_live.sh  setup.sh
src/: config.rs  error.rs  lib.rs  main.rs  models.rs  trading_bot.rs  utils.rs
src/api/: client.rs  mod.rs  types.rs  websocket.rs
src/strategies/: base.rs  dca.rs  grid.rs  mod.rs  momentum.rs
