[package]
name = "hyperliquid-trading-bot"
version = "0.1.0"
edition = "2021"
authors = ["topsecretagent007 <topsecretagent_007>"]
description = "A high-performance Hyperliquid trading bot written in Rust"
license = "MIT"
repository = "https://github.com/topsecretagent007/hyperliquid-trading-bot"
keywords = ["trading", "bot", "hyperliquid", "defi", "cryptocurrency"]
categories = ["finance", "command-line-utilities"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.13"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.32", features = ["serde"] }
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
dotenv = "0.15"
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = "0.4"
